--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-play",
   "description": "This project is under construction. Don't use it yet.",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "git@github.com:gyuwon/express-play.git"
@@ -11,7 +11,6 @@
     "url": "http://opensource.org/licenses/MIT"
   },
   "dependencies": {
-    "path": "~0.4.9",
     "express": "~3.4.7",
     "inject-me": "~0.2.1",
     "function-signature": "~0.2.1",
@@ -20,7 +19,10 @@
   "devDependencies": {
     "should": "latest",
     "sinon": "latest",
-    "fromjs": "latest"
+    "fromjs": "latest",
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-mocha-test": "~0.8.1"
   },
   "main": "framework.js"
 }
